--- a/sass/_source.scss
+++ b/sass/_source.scss
@@ -1,5 +1,5 @@
 body {
-	// font-family: danaweb  !important;
+	font-family: iransansx  !important;
 	direction: rtl;
 	margin: 0;
 	overflow-x: hidden !important;
@@ -99,3 +99,14 @@ textarea{
 		outline: none;
 	}
 }
+
+@font-face { font-family: 'iransansx'; src: url('fonts/iransansx/woff2/IRANSansX-Heavy.woff2');font-weight: 100; }
+@font-face { font-family: 'iransansx'; src: url('fonts/iransansx/woff2/IRANSansX-Thin.woff2');font-weight: 200; }
+@font-face { font-family: 'iransansx'; src: url('fonts/iransansx/woff2/IRANSansX-UltraLight.woff2');font-weight: 300; }
+@font-face { font-family: 'iransansx'; src: url('fonts/iransansx/woff2/IRANSansX-Light.woff2');font-weight: 350; }
+@font-face { font-family: 'iransansx'; src: url('fonts/iransansx/woff2/IRANSansX-Regular.woff2');font-weight: 400; }
+@font-face { font-family: 'iransansx'; src: url('fonts/iransansx/woff2/IRANSansX-Medium.woff2');font-weight: 500; }
+@font-face { font-family: 'iransansx'; src: url('fonts/iransansx/woff2/IRANSansX-DemiBold.woff2');font-weight: 600; }
+@font-face { font-family: 'iransansx'; src: url('fonts/iransansx/woff2/IRANSansX-Bold.woff2');font-weight: 700; }
+@font-face { font-family: 'iransansx'; src: url('fonts/iransansx/woff2/IRANSansX-ExtraBold.woff2');font-weight: 800; }
+@font-face { font-family: 'iransansx'; src: url('fonts/iransansx/woff2/IRANSansX-Black.woff2');font-weight: 900; }
