--- a/additional.css
+++ b/additional.css
@@ -1,5 +1,193 @@
+body {
+  font-family: iransansx !important;
+  direction: rtl;
+  margin: 0;
+  overflow-x: hidden !important;
+  width: 100% !important;
+  padding: 0;
+}
+
+* {
+  box-sizing: border-box;
+  direction: rtl;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: transparent;
+}
+
+.row .col {
+  float: right !important;
+}
+
+.right {
+  float: left !important;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.mainView {
+  width: 85vw;
+  margin-left: auto !important;
+  margin-right: auto !important;
+}
+@media screen and (max-width: 1024px) {
+  .mainView {
+    width: 99vw;
+    padding-right: 15px !important;
+    padding-left: 15px !important;
+  }
+}
+
+label {
+  display: block;
+  margin-bottom: 15px;
+  font-size: 13px;
+  text-align: right;
+  width: 100%;
+  padding-right: 15px;
+}
+
+input {
+  display: block;
+  padding: 10px 20px;
+}
+input[type=text], input[type=password], input[type=email], input[type=tel], input[type=url] {
+  border: none;
+  border-radius: 45px;
+  font-size: 14px;
+  width: 100%;
+  direction: rtl !important;
+  margin: 0 !important;
+  height: 2.5rem !important;
+}
+input[type=checkbox] {
+  width: -moz-max-content;
+  width: max-content;
+  margin: 0;
+}
+input[type=submit] {
+  border: none;
+  font-weight: 500;
+  padding: 0 25px;
+  cursor: pointer;
+  transition: all 0.3s;
+  border-radius: 10px;
+  font-size: 14px;
+}
+input:focus {
+  outline: none;
+}
+
+textarea {
+  margin-top: 5px;
+  display: block;
+  width: 100%;
+  height: 150px;
+  padding: 10px 20px;
+  resize: none;
+  border-radius: 15px;
+  border: none;
+  font-size: 14px;
+}
+textarea:focus {
+  outline: none;
+}
+
+@font-face {
+  font-family: "iransansx";
+  src: url("fonts/iransansx/woff2/IRANSansX-Heavy.woff2");
+  font-weight: 100;
+}
+@font-face {
+  font-family: "iransansx";
+  src: url("fonts/iransansx/woff2/IRANSansX-Thin.woff2");
+  font-weight: 200;
+}
+@font-face {
+  font-family: "iransansx";
+  src: url("fonts/iransansx/woff2/IRANSansX-UltraLight.woff2");
+  font-weight: 300;
+}
+@font-face {
+  font-family: "iransansx";
+  src: url("fonts/iransansx/woff2/IRANSansX-Light.woff2");
+  font-weight: 350;
+}
+@font-face {
+  font-family: "iransansx";
+  src: url("fonts/iransansx/woff2/IRANSansX-Regular.woff2");
+  font-weight: 400;
+}
+@font-face {
+  font-family: "iransansx";
+  src: url("fonts/iransansx/woff2/IRANSansX-Medium.woff2");
+  font-weight: 500;
+}
+@font-face {
+  font-family: "iransansx";
+  src: url("fonts/iransansx/woff2/IRANSansX-DemiBold.woff2");
+  font-weight: 600;
+}
+@font-face {
+  font-family: "iransansx";
+  src: url("fonts/iransansx/woff2/IRANSansX-Bold.woff2");
+  font-weight: 700;
+}
+@font-face {
+  font-family: "iransansx";
+  src: url("fonts/iransansx/woff2/IRANSansX-ExtraBold.woff2");
+  font-weight: 800;
+}
+@font-face {
+  font-family: "iransansx";
+  src: url("fonts/iransansx/woff2/IRANSansX-Black.woff2");
+  font-weight: 900;
+}
 .archiveTestsParent .testsCategoryParent .testsCategorySections {
   display: grid;
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-  grid-gap: 20px;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  grid-gap: 10px;
+}
+@media screen and (max-width: 480px) {
+  .archiveTestsParent .testsCategoryParent .testsCategorySections {
+    grid-template-columns: repeat(1, minmax(0, 1fr)) !important;
+  }
+}
+@media screen and (max-width: 768px) {
+  .archiveTestsParent .testsCategoryParent .testsCategorySections {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-gap: 0px;
+  }
+}
+.archiveTestsParent .testsCategoryParent .testsCategorySections .row .card {
+  border-radius: 8px;
+}
+.archiveTestsParent .testsCategoryParent .testsCategorySections .row .card-image .linkBtnTestCardArchive {
+  background-color: #2e31a6 !important;
+  left: 24px !important;
+  right: unset;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.archiveTestsParent .testsCategoryParent .testsCategorySections .row .card-image .imageTestCardArchive {
+  overflow: hidden;
+  min-height: 200px;
+  max-height: 200px;
+}
+.archiveTestsParent .testsCategoryParent .testsCategorySections .row .card-image .imageTestCardArchive img {
+  border-radius: 8px 8px 0 0;
+}
+.archiveTestsParent .testsCategoryParent .testsCategorySections .row .card-content .titleTestCardArchive {
+  font-weight: 500;
+  margin-top: 10px;
+}
+.archiveTestsParent .testsCategoryParent .testsCategorySections .row .card-content .explainTestCardArchive {
+  text-align: justify;
+}
+.archiveTestsParent .testsCategoryParent h3.titleOfCategory {
+  border-bottom: 1px solid #9e9e9e;
+  padding-bottom: 10px;
 }/*# sourceMappingURL=additional.css.map */
