--- a/style-rtl.css
+++ b/style-rtl.css
@@ -1,4 +1,5 @@
 body {
+  font-family: iransansx !important;
   direction: rtl;
   margin: 0;
   overflow-x: hidden !important;
@@ -94,6 +95,56 @@ textarea:focus {
   outline: none;
 }
 
+@font-face {
+  font-family: "iransansx";
+  src: url("fonts/iransansx/woff2/IRANSansX-Heavy.woff2");
+  font-weight: 100;
+}
+@font-face {
+  font-family: "iransansx";
+  src: url("fonts/iransansx/woff2/IRANSansX-Thin.woff2");
+  font-weight: 200;
+}
+@font-face {
+  font-family: "iransansx";
+  src: url("fonts/iransansx/woff2/IRANSansX-UltraLight.woff2");
+  font-weight: 300;
+}
+@font-face {
+  font-family: "iransansx";
+  src: url("fonts/iransansx/woff2/IRANSansX-Light.woff2");
+  font-weight: 350;
+}
+@font-face {
+  font-family: "iransansx";
+  src: url("fonts/iransansx/woff2/IRANSansX-Regular.woff2");
+  font-weight: 400;
+}
+@font-face {
+  font-family: "iransansx";
+  src: url("fonts/iransansx/woff2/IRANSansX-Medium.woff2");
+  font-weight: 500;
+}
+@font-face {
+  font-family: "iransansx";
+  src: url("fonts/iransansx/woff2/IRANSansX-DemiBold.woff2");
+  font-weight: 600;
+}
+@font-face {
+  font-family: "iransansx";
+  src: url("fonts/iransansx/woff2/IRANSansX-Bold.woff2");
+  font-weight: 700;
+}
+@font-face {
+  font-family: "iransansx";
+  src: url("fonts/iransansx/woff2/IRANSansX-ExtraBold.woff2");
+  font-weight: 800;
+}
+@font-face {
+  font-family: "iransansx";
+  src: url("fonts/iransansx/woff2/IRANSansX-Black.woff2");
+  font-weight: 900;
+}
 img {
   max-width: 100%;
   height: auto;
@@ -134,7 +185,7 @@ img {
 }
 
 footer .site-info {
-  background-color: red;
+  background-color: #2e31a6;
   padding-top: 50px;
 }
 footer .site-info .mainFooter {
