--- a/style-rtl.scss
+++ b/style-rtl.scss
@@ -38,7 +38,7 @@ img{
 }
 footer{
     .site-info{
-        background-color: red;
+        background-color: #2e31a6;
         padding-top: 50px;
         .mainFooter{
             a{
