--- a/additional.scss
+++ b/additional.scss
@@ -2,54 +2,71 @@
 @import 'sass/source';
 
 .archiveTestsParent{
-    .testsCategoryParent{
-        .testsCategorySections {
-            display: grid;
-            grid-template-columns: repeat(4, minmax(0, 1fr));
-            grid-gap: 10px;
-            @include xs{
-                grid-template-columns: repeat(1,minmax(0,1fr)) !important;
+    min-height: 100vh;
+    .searchResult{
+        margin-top: 20px;
+    }
+}
+.testsCategorySections {
+    display: grid;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    grid-gap: 10px;
+    @include xs{
+        grid-template-columns: repeat(1,minmax(0,1fr)) !important;
+    }
+    @include sm{
+        grid-template-columns: repeat(2,minmax(0,1fr));
+        grid-gap: 0px;
+    }
+    .row{
+        .card{
+            border-radius: 8px;
+            box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
+        }
+        .card-image{
+            .linkBtnTestCardArchive{
+                background-color: #2e31a6 !important;
+                left: 24px !important;
+                right: unset;
+                display: flex;
+                justify-content: center;
+                align-items: center;
             }
-            @include sm{
-                grid-template-columns: repeat(2,minmax(0,1fr));
-                grid-gap: 0px;
-            }
-            .row{
-                .card{
-                    border-radius: 8px;
-                }
-                .card-image{
-                    .linkBtnTestCardArchive{
-                        background-color: #2e31a6 !important;
-                        left: 24px !important;
-                        right: unset;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                    }
-                    .imageTestCardArchive{
-                        overflow: hidden;
-                        min-height: 200px;
-                        max-height: 200px;
-                        img{
-                            border-radius: 8px 8px 0 0;
-                        }
-                    }
-                }
-                .card-content{
-                    .titleTestCardArchive{
-                        font-weight: 500;
-                        margin-top: 10px;
-                    }
-                    .explainTestCardArchive{
-                        text-align: justify;
-                    }
+            .imageTestCardArchive{
+                overflow: hidden;
+                min-height: 200px;
+                max-height: 200px;
+                height: 200px;
+                img{
+                    border-radius: 8px 8px 0 0;
+                    display: block;
+                    object-fit: cover;
                 }
             }
         }
-        h3.titleOfCategory{
-            border-bottom: 1px solid #9e9e9e;
-            padding-bottom: 10px;
+        .card-content{
+            .titleTestCardArchive{
+                font-weight: 500;
+                margin-top: 10px;
+            }
+            .explainTestCardArchive{
+                text-align: justify;
+            }
+        }
+    }
+}
+h3.titleOfCategory{
+    border-bottom: 1px solid #9e9e9e;
+    padding-bottom: 10px;
+}
+.site-header{
+    nav{
+        box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
+        background-color: #fff;
+        .nav-wrapper{
+            a{
+                color: #000;
+            }
         }
     }
 }
