--- a/style-rtl.scss
+++ b/style-rtl.scss
@@ -65,3 +65,69 @@ footer{
         }
     }
 }
+.comments-area{
+    width: 75%;
+    input[type=submit]{
+        padding: 15px 25px;
+        background-color: #2E31A6;
+        color: white;
+    }
+    .comment-list{
+        padding: 0;
+        li{
+            &::marker{
+                content: none;
+            }
+        }
+        img{
+            border-radius: 50%;
+        }
+        
+        .comment-meta , .comment-author{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        a{
+            color: #2E31A6;
+        }
+    }
+    .fn{
+        margin-right: 8px;
+    }
+    .comment-reply-title{
+        font-size: 24px;
+        font-weight: 700;
+    }
+    .comment{
+        box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
+        border-radius: 15px;
+        padding: 0 25px;
+        margin: 15px 0;
+    }
+    .comment-body{
+        padding: 15px 0;
+    }
+    .depth-2{
+        box-shadow: unset;
+        padding: 0;
+        border-radius: 0;
+        border-top: 1px solid #00000033;
+    }
+    textarea{
+        box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
+        border: none;
+        border-radius: 15px;
+    }
+    input[type=text] , input[type=email]{
+        box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
+        border: none;
+        border-radius: 8px;
+    }
+    .comment-form-url,.says{
+        display: none;
+    }
+    .comment-metadata{
+        font-size: 12px;
+    }
+}
